<resources>
    <string name="app_name">브이루트</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="main_page">메인 화면</string>
    <string name="v_route">브이 루트</string>
    <string name="schedule_share">일정 공유</string>
    <string name="airplane_question">항공권 질문</string>
    <string name="setting">환경 설정</string>

    <string name="fes_text_1"> 2008년에 시작된 清瀬 해바라기 축제. 여름의 눈부신 햇살 아래 빛나는 옐로우가 일면에 펼쳐집니다.
        약 2만4천 평방미터의 광대한 회장은 평소에는 개인 농가가 밀을 재배하고 있으며, 이 축제에 맞춰 특별히 해바라기를 재배하고 축제 개최 기간 동안만 행사를 개방됩니다. 약 10만개의 해바라기가 매년 많은 관광객의 눈을 즐겁게하고 있습니다.
        또한 회장에서는 가지,오이,완두콩 등 많은 농산물이 생산되는 기요세시 특유의 신선한 여름 야채와 해바라기 컷의 판매도 특별히 이루어집니다.
        밝은 색상으로 태양을 향해 똑바로 기지개 해바라기에서 건강을 나누어 줄 장소입니다. </string>
    <string name="fes_text_1_1"> 너무너무 고생해서 도착한 해바라기 축제의 장. 이미 제가 도착했을 때는 축제가 거의 끝나갈 무렵이였고, 해도 뉘엿뉘엿 져가고 있었습니다. 하지만 너무너무 예쁘고 예쁜 수만송이의 해바라기들을 보고있자니 대체 얼마나 많은 사진을 찍었던지..</string>

    <string name="fes_text_2"> 도쿄 마루 노우치 지역 일본 우편이 운영하고있는 JP 타워 상업 시설 KITTE에서 국내외에서 인기있는 스모 이벤트 힘 좋은 KITTE를 8월20일 ~ 8월29일에 개최합니다.
         본 이벤트에서는 일본다움과 새로움을 컨셉으로하는 KITTE에서 일본의 스포츠 스모를 통해 전통적인 일본 문화를 체험할 수 있습니다. 개최 기간 중 1F 아트리움 진짜 씨름판을 설치해
        마치 료고쿠 국기관에있는듯한 공간을 연출하고 8월 29일에는 박력있는 마쿠우치 스모선수의 요코즈나 土俵入り 등을 가까이서 즐길 수 있습니다.</string>
    <string name="fes_text_2_2">미타카에 남아있는 아이들은 JP 타워 KITTE에서 열린 꼬마 스모 KITTE 장소에 참가했습니다. 원래 대관령 거문고 유럽의 나루토 감독과 선수 여러분과 연습을했습니다. 스모 KITTE 위치 마쿠우치 역사와 어린이 스모 연습에도 참가 예정입니다!</string>

    <string name="fes_text_3"> 도쿄의 오아시스 히비야 공원에서 매년 많은 방문객으로 붐비는 도심형 대형 윤무 대회가 개최됩니다.
        마루 노우치와 히비야에 근무하는 직장인이나 외국인 비롯한 지역 주민이 대분수를 중심으로 몇 겹의 춤의 고리를 만들어 "마루 노우치 선창 '에 맞춰 춤을 춥니다.
        마루 노우치 선창은 1932년에 사이조 여든 중산晋平의해 만들어진, 윤무의 정평 곡으로 알려진 도쿄 선창이 원곡입니다. 누구라도 부담없이 참가할 수 있는 도내 최대의 윤무 대회에서 일본의 여름을 즐길 수 있습니다.</string>
    <string name="fes_text_3_2">즉석 참가도 많고 밤바람을 타고 들려오는 북소리의 리듬과 사람들의 환성. 옛날 그대로의 경쾌한 음악에 맞추어 윤무를 추는 것은 일본인에게 빼놓을 수 없는 여름 행사입니다.</string>

    <string name="fes_text_4">도쿄의 여름 풍물시에도 셀 수있게되었다 엔지 아와 오도리. 춤꾼의 미소를 통해 도시와 사람이 건강하게 밝게 해달라는 마음을 담아 개최합니다. 엔지의 거리는 1 만 명의 춤꾼과 100 만명의 관객을 그대로 아와 오도리 일색입니다.</string>
    <string name="fes_text_4_2">에라이얏챠 에라이얏챠 요이요이요이요이 춤추는 바보, 보는 바보. 같은 바보라면 춤 안추면 손해야, 손해! 일본에는 이런 말이 있습니다. 보고 있는 것보다 참가해서 같이 춤을 추는 것이 즐겁다는 뜻입니다.</string>

    <string name="fes_text_5">요사 코이의 본고장 고치의 전통과 유행의 최첨단 인 하라주쿠 오모테 산도와 융합 된 수도권 최대의 축제입니다. 참가 팀은 전국 각지에서 약 100 팀, 무희 총 5,500 명이 집결 해, 열 氣溢되는 연무를 선보입니다.</string>
    <string name="fes_text_5_2">약 5,000명이 집결하여 뜨거운 열기가 넘치는 춤무대를 만들어 냅니다. 일본각지의 다양한 춤을 한자리에서 볼수있는 기회가 되실겁니다!!</string>

    <string name="fes_text_6">도쿄 도청 전망대는 대 전망대 150m와 특별 전망대 250m의 2개가 있습니다. 기후가 좋은 날에는 후지산과 보소반도를 바라볼 수 있습니다. 매주 수요일,목요일 밤에는 야경을 보면서 연주를 전망 요금만으로 즐길 수있는 라이브 이벤트를 개최합니다.</string>
    <string name="fes_text_6_2">도쿄 타워를 가는 법은 다양한데, 도쿄 타워는 지하철 버뮤다 삼각지대 언덕에 절묘하게 위치한다. 지하철역과 직결되지 않기 때문에 걸어야한다.</string>

    <string name="fes_text_7">도쿄 베이 지역 오다이바의 천연 온천 테마파크. 지하 1400 미터에서 퍼 원천을 활용한 옥내 목욕탕을 비롯한 13종류의 온천을 즐길 수있다. 또한, 유카타 차림으로에도 서민의 활기를 재현한 広小路나 팔백팔 도시로 어린이부터 어른까지 하루종일 즐길 수있다.</string>
    <string name="fes_text_7_2">1,200엔 쿠폰으로 외국인들만 쓸 수 있습니다. 미리 출력해서 가면 되는데 지금은 여권이나 일본 재류카드를 가지고 있는 외국인들만 신분증 제시 후 사용 가능합니다. </string>

    <string name="fes_text_8"> 도쿄 디즈니랜드는 7 개의 나라로 구성된 디즈니 동화의 세계에서 꿈과 마법의 나라의 거주자인 캐릭터들과 접촉할 수 있습니다. 도쿄 디즈니 씨는 바다의 모험가가 된 기분으로
    7개의 테마 포트로 나누어진 디즈니의 세계를 즐길 수 있습니다. 익스 피어리 상점과 레스토랑, 국내 최대 규모의 영화관이 병설된 쇼핑 타운. 디즈니랜드에 들어가지 않고도 사용할 수 있습니다.</string>
    <string name="fes_text_8_2">아침 6시 30분에 출발해 고속도로를 달려 8시에 도착한 디즈니랜드는 한 시간이나 일찍 도착했는데 엄청난 인파가 몰렸다.</string>

    <string name="fes_text_9">메이지 신궁 진좌 60년 기념 행사로 1980년에 실시 된 이후 매년 100만명의 인파로 붐비는 진구가 이엔 불꽃 놀이 크고 작은 스타 마인을 비롯한 12,000발의 불꽃이 도심의 밤하늘을 장식
        형형색색의 불꽃을 진구 구장, 진구 연식 야구장, 지 치부 노미야 럭비장, 도쿄 체육관 부지 내에서 즐길 수 있습니다. 각각의 장소에서 이벤트가 개최되어 주요 장소 인 진구 구장에서 불꽃 발사 전에 호화 아티스트에 의한
        라이브를 회장은 열기에 싸여있다.</string>
    <string name="fes_text_9_2">유명한 불꽃축제는 하루에 수십만명이나 되는 사람이 몰려듭니다. 도쿄는 여러 종류의 철도가 있으므로 개최 장소에서 가장 가까운 역을 사용하지 않는 것만으로도 어느 정도 혼잡을 피할 수 있지만,
        도착 후, 종료 후 어떻게 할지 생각해두지 않으면 큰 고생을 하게 됩니다.</string>

    <string name="fes_text_10">도쿄에서 가장 높은 곳에있는 해발 500m의 비어 가든 "카오산 비아 마운트" 낮에는 푸른 하늘 아래 펼쳐지는 고층 빌딩, 밤에는 빛나는 야경을 감상하면서 음료 뷔페를 즐길 수 있습니다. 웅대한 경치가 펼쳐지는 테라스 숲의 나무를 가까이 느낄 가든 좌석 실내 홀 좌석이 있고,
        각각 다른 분위기를 맛볼 수 있습니다. 음료는 생맥주, 하이볼, 와인, 칵테일 등 음료 뷔페. 요리는 일식 양식 중식 등 상시 30 종 이상이며 자가 제면을 사용한 하치 오지라면과 신선한 하치 오지 야채, 여성에게 인기있는 디저트도 충실하고 있습니다.</string>
    <string name="fes_text_10_2">날짜가 맞으면 불꽃 놀이를 볼 수 있습니다. 요금 :남성 (고등학생 이상) ¥ 3,500 여성 (고등학생 이상) ¥ 3,300 중학생 ¥ 2,500 초등학생 ¥ 1,500, 유아 ¥ 500 </string>

    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>

    <string name="airport_txt">브이루트의 최저가 항공권 조회는 제휴를 통해 정보를 제공해 드리고 있습니다. 당사는 본 제휴와 관련한 상담, 예약, 구매
    등에 대해 단순 정보 제공 이상으로 관여하지 않으며, 이로 인해 발생하는 모든 일에 대한 책임을 지지 않습니다.</string>
    <string name="airport_txt2">예약 내역은 당 제휴사에서 전송하는 이메일 등으로 확인할 수 있으며, 예약의 변경/취소 등에 관련한 내용은 실제 예약을 진행한 업체에
    직접 문의하셔야 합니다.</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Got it!</string>

    <string name="welcome_1">브이루트에 오신 것을 환영합니다.</string>
    <string name="welcome_1_1">브이루트는 졸업 전시에 맞춰 어플의 사용 값이 미리 고정으로 설정되어 있습니다.</string>
    <string name="welcome_1_2">사용 가이드 라인를 읽어보시고 브이루트를 탐험해보세요!</string>

    <string name="welcome_2">여행 국가를 선택 할 수 있습니다.</string>
    <string name="welcome_3">여행 일정을 선택 할 수 있습니다.</string>
    <string name="welcome_4">최저가 항공권을 검색합니다.</string>
    <string name="welcome_5">세 가지 항목을 모두 입력하시면 해당 지역, 일정, 도착 공항을 기준으로 루트를 검색할 수 있습니다.</string>
    <string name="welcome_6">메인 화면을 둘러보신 뒤 루트검색 버튼을 눌러보세요!</string>

    <string name="welcome2_1">루트 검색 페이지에 오신 것을 환영합니다.</string>
    <string name="welcome2_1_1">이전 페이지에서 저장하신 여행 국가의 도착 공항을 기준으로 근처의 명소 혹은 여행 일정에 열리는 축제 정보를 확인하고 루트를 지정할 수 있습니다.</string>
    <string name="welcome2_1_2">졸업 전시를 위해 일정의 루트들은 모두 고정되어 있습니다.</string>

    <string name="welcome2_2">마커를 클릭하시면 해당 지역명, 루트 지정 시 도착하는 시간, 자세한 정보 확인이 가능한 돋보기 아이콘이 나타납니다.</string>
    <string name="welcome2_3">1일차 루트를 모두 지정했다면 이 버튼을 눌러 다음 날 루트를 지정할 수 있습니다.</string>
    <string name="welcome2_4">마지막 일정까지 모든 루트를 지정하여 메인화면으로 넘어가시면 왼쪽 상단의 네비게이션 버튼을 클릭해주세요.</string>
    <string name="welcome2_5">네비게이션 항목의 브이루트를 누르시면 저장하신 루트의 이동 정보를 360˚ VR 영상으로 체험할 수 있습니다!</string>




</resources>
