<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome2_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tr_black85"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome2_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:lineSpacingExtra="8dip"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome2_1_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="8dip"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome2_1_2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="8dip"
            />

        </RelativeLayout>



    </RelativeLayout>


</RelativeLayout>